--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -7,54 +7,33 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 1rem 2rem;
+    padding: 56px 78px;
     gap:32px;
     background-color: #171D1F;
-    border: 1px solid #00090E;
 }
 .img{
     width: 50%;
     max-width: 410px;
-    max-height: 636px;
+    height: 683px;
 }
 .img img{
     width: 100%;
     height: 100%;
 }
-.login{
+.containerForm{
     width: 50%;
-    max-width: 378px;
-    height: 636px;
-    gap:1rem;
+    max-width: 410px;
+    min-height: 683px;
+    gap:2rem;
     text-align: left;
     padding: 0 2rem;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
 }
-.login p{
+p{
     font-size: 22px;
-}
-.form{
-    gap:2rem;
-    display: flex;
-    flex-direction: column;
-}
-
-.outrasContas {
-    position: relative; /* El contenedor se convierte en el referente para posicionar elementos dentro */
-  }
-  
-    .hrTitulo {
-        background-color: #171D1F;
-        text-align: center;
-        padding: 0.3rem;
-        position: absolute; /* Permite posicionar el título sobre la línea */
-        top: -0.3rem;
-        left: 50%; /* Centra el elemento horizontalmente */
-        width: 70%;
-        transform: translateX(-50%); /* Ajusta el punto de referencia para que quede realmente centrado */
-      }
-      
+}  
 
 .cadastroLink{
     display: flex;
@@ -65,4 +44,27 @@
 }
 .cadastroLink a,.cadastroLink i{
     color: #81FE88;
+}
+@media screen and (max-width: 800px) {
+    .container{
+        width: 100%;
+        height: 100%;
+        padding: 1rem;
+        flex-direction: column;
+        gap:0;
+    }
+    .img{
+        width: 100%;
+        max-width: 100%;
+        max-height: 50%;
+    }
+    .containerForm{
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+    }
+    .containerForm p{
+        font-size: 18px;
+    }
+    
 }
