--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,36 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 #root {
-  max-width: 1280px;
+  max-width: 100vw;
+  height: auto;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  color:#E1E1E1;
+  color:#ffffff;
   justify-content: center;
-  font-family:'Courier New', Courier, monospace;
+  box-sizing: border-box;
+  min-height: 100vh;
+  font-family:'Prompt', monospace;
+}
+body {
+  min-height: 100vh;
+  overflow-y: auto; /* Permite el desplazamiento según sea necesario */
+}
+
+body::-webkit-scrollbar {
+  width: 0; /* Oculta la barra en navegadores basados en WebKit */
+}
+
+html {
+  scrollbar-width: none; /* Para Firefox */
 }
 body{
-  background-color:black;
+  background-color:rgb(0, 0, 0);
+  height: auto;
+  margin: 0;
 }
 p{
   margin: 0;
@@ -24,6 +46,13 @@ h1{
   margin:0;
   font-size: 2rem;
 }
-input::placeholder{
-  color:#171D1F;
+
+button {
+  border: none;
+  background: transparent;
+  outline: none;
+}
+button:active{
+  border: none;
+  outline: none;
 }
