--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -33,6 +33,7 @@ input[type="checkbox"] {
     border-radius: 4px;
     position: relative;
     cursor: pointer;
+margin-right: 6px;
 }
 input[type="checkbox"]:checked::before {
     content: "✔";
@@ -52,3 +53,11 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
+input::placeholder{
+    color:#171D1F;
+  }
+  .error-mensagem{
+    color: red;
+    font-size: 14px;
+    margin-top: 4px;
+  }
