--- a/src/App.css
+++ b/src/App.css
@@ -46,13 +46,15 @@ h1{
   margin:0;
   font-size: 2rem;
 }
-
+input,textarea{
+  outline: none ;
+}
 button {
   border: none;
   background: transparent;
-  outline: none;
+  outline: none !important;
 }
-button:active{
+button:active, button:focus {
   border: none;
   outline: none;
 }
