--- a/src/components/Feed/Cards/Card/cards.css
+++ b/src/components/Feed/Cards/Card/cards.css
@@ -15,7 +15,8 @@
     transition: transform 0.2s;
     min-width: 486px;
     max-width: 45%;
-    max-height: 490px;
+    height: 490px;
+    max-height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
