--- a/src/components/Boton/boton.css
+++ b/src/components/Boton/boton.css
@@ -11,6 +11,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    width: 100%;
 }
 .boton:hover, .botaoPublicar:focus{
     color: #BCBCBC;
