--- a/src/pages/Publicar/publicar.css
+++ b/src/pages/Publicar/publicar.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     max-width: 1200px;
     flex-wrap: wrap;
-    
+    color:#BCBCBC;
 }
 .publicar-content{
     width: 86%;
@@ -42,6 +42,18 @@
     height: 100%;
     object-fit: fill;
 }
+.boton-upload{
+    width: 100%;
+    height: 50px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #BCBCBC;
+    font-size: 20px;
+    cursor: pointer;
+    border: #BCBCBC solid 1px;
+}
 .archivo-info{
     width: 100%;
     display: flex;
@@ -59,4 +71,12 @@
     align-items: center;
     display: flex;
     color: #888888;
+}
+.botones-publicar{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.5rem;
 }
