--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,13 @@
 }
 body {
   min-height: 100vh;
-  overflow-y: auto; /* Permite el desplazamiento según sea necesario */
+  overflow-y: auto;
 }
-
 body::-webkit-scrollbar {
-  width: 0; /* Oculta la barra en navegadores basados en WebKit */
+  width: 0;
 }
-
 html {
-  scrollbar-width: none; /* Para Firefox */
+  scrollbar-width: none; 
 }
 body{
   background-color:rgb(0, 0, 0);
