--- a/src/components/Feed/Cards/Card/cards.css
+++ b/src/components/Feed/Cards/Card/cards.css
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
     text-align: center;
     height: 55%;
     width: 100%;
