--- a/src/pages/AcercaDe/acercaDe.css
+++ b/src/pages/AcercaDe/acercaDe.css
@@ -16,7 +16,7 @@
     gap: 1.5rem;
 }
 .AcercaDe-content h1{
-    color: #81FE88;
+    color:--verde ;
     font-size: 44px;
     font-weight: 500;
 }
