--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@
   box-sizing: border-box;
   min-height: 100vh;
   font-family:'Prompt', monospace;
+  --gris-oscuro:#132E35;
+  --verde-claro:#81FE88;
 }
 body {
   min-height: 100vh;
@@ -48,11 +50,11 @@ input,textarea{
   outline: none ;
 }
 button {
-  border: none;
+
   background: transparent;
   outline: none !important;
 }
 button:active, button:focus {
-  border: none;
+ 
   outline: none;
 }
