--- a/src/components/Boton/boton.css
+++ b/src/components/Boton/boton.css
@@ -2,7 +2,7 @@
     text-align: center;
     font-weight: 600;
     font-size: 16px;
-    border: 1px solid #81FE88;
+    border: 1px solid var(--verde-claro);
     cursor: pointer;
     padding: 12px 16px;
     border-radius: 8px;
@@ -13,7 +13,7 @@
     gap: 1rem;
     width: 100%;
 }
-.boton:hover, .botaoPublicar:focus{
-    color: #BCBCBC;
-    border: 1px solid #BCBCBC;
+.boton:hover, .botao:focus{
+    color: #6d6c6c;
+    border: 20px 2px solid var(--verde-claro);
 }
