--- a/src/components/FormPost/formPost.css
+++ b/src/components/FormPost/formPost.css
@@ -6,3 +6,27 @@
     width: 100%;
     gap: 1rem;
 }
+.botones-publicar-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.botones{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.5rem;
+}
+.mensaje-error {
+  color: red;
+  font-weight: bold;
+  margin-top: 10px;
+  text-align: center;
+}
+.mensaje-exito{
+    color: var(--verde-claro);
+}
