--- a/src/components/Comentarios/comentarios.css
+++ b/src/components/Comentarios/comentarios.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  border: 0;
 }
 .comentario p,.comentario, .nuevo-comentario {
    font-size: 16px;
@@ -18,6 +19,13 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
+}
+.respuesta{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-left: 5%;
+  width: 95%;
 }
 .comentario-boton{
   background: none;
