--- a/src/pages/Perfil/perfil.css
+++ b/src/pages/Perfil/perfil.css
@@ -64,6 +64,7 @@
     flex-direction: column;
     gap: 1rem;
     width: 100%;
+    background-color: rgb(2, 8, 24);
 }
 .perfil-posts-filter{
     display: flex;
@@ -73,7 +74,11 @@
     justify-content: center;
 }
 .filtro-post{
-    color: --verde;
+    color: #888888;
     font-size: large;
     font-weight: 600;
+}
+.filtro-post:hover,.filtro-post:focus{
+    color: var(--verde-claro);
+    cursor: pointer;
 }
