--- a/src/pages/Perfil/perfil.css
+++ b/src/pages/Perfil/perfil.css
@@ -24,12 +24,22 @@
     height: auto;
     gap: 2rem;
 }
+.perfil-header-image{
+    width: 30%;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    height: 280px;
+    overflow: hidden;
+}
 .perfil-header-text{
     display: flex;
     flex-direction: column;
     gap: 1rem;
     text-align: left;
     color: #888888;
+    width: 66%;
 }
 .perfil-header-user{
     display: flex;
@@ -64,7 +74,6 @@
     flex-direction: column;
     gap: 1rem;
     width: 100%;
-    background-color: rgb(2, 8, 24);
 }
 .perfil-posts-filter{
     display: flex;
