--- a/src/pages/Perfil/perfil.css
+++ b/src/pages/Perfil/perfil.css
@@ -54,10 +54,25 @@
 .perfil-header-info{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 .perfil-header-info h1{
     color: --verde;
+}
+.perfil-bio-input {
+  width: 100%;
+  padding: 0.5rem;
+  resize: vertical;
+  font-size: 20px;
+  margin-bottom: 0.5rem;
+  background-color: transparent;
+  color: #888888;
+}
+.perfil-bio-boton{
+     color: #888888;
+     width: 15%;
+     align-self: flex-end;
+     padding: 0%;
 }
 .perfil-header-stats{
     display: flex;
